  Unfortunately the Pause/Break key doesn't register in SDL. This
  functionality can be disabled with build-time option
  BRANDY_NOBREAKONCTRLPRTSC.
- System: Added some fixes to handle issues with the sdl12-compat
  library.
- System: Implemented an internal *./*CAT handler, loosely stiled on BBC
  Micro ADFS utput.
- MOS: Implemented OSBYTE 210

* V1.22.14 - 31 December 2022
- System: Workaround for sdl12-compat library bug affecting keyboard input.
- System: RISC OS SharedCLibrary build now supports networking.
- System: Now compiles on Solaris 11 (tested x86_64). Use "gmake".
- System: Now compiles on illumos (an OpenSolaris fork). Use makefiles in
  build directory.
- System: Text mode build available for Minix 3 (no networking yet).
  Use gmake -f build/makefile.minix
- System: Fixed a bug that caused Brandy to throw an Xlib error in some
  cases when exiting.
- Graphics: Fixed GCOL action codes 5-7 for filled rectangles (this function
  does not use the plot_pixel prototype).
- Graphics: Fixed an error where VDU variables 138 and 139 were erroneously
  clamping to pixel boundaries based on the current screen mode scaling.
- Graphics: Fixed an integer division rounding error that crept in when
  drawing went partially off screen.
- Graphics: Can now plot arcs RISC OS-style (thank you Michael Fairbank)
- Graphics: Much faster full-screen blit for 1:1 pixel modes.
- Sound: Notes are now queued by default if no delay parameter is used.
- Sound: Block instead of discarding notes if the buffer is full.
- BASIC: Fix LVAR so it doesn't choke on stupidly long variable names.
- BASIC: Tidied up an earlier cheat - when interpreting @%, if the top byte
  is non-zero then STR$ obeys @% so we were masking against &FF - but we
  were setting all the top bits when using "+". This is fixed now the top
  byte is set to 1 instead. (We still check the byte is non-zero.)
- BASIC: Raising to the power has better bounds checking.